--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .DS_Store
+
+### SwiftPackageManager ###
+Packages
+xcuserdata
+*.xcodeproj
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
